--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -49,7 +49,7 @@
         return new Promise((resolve, reject) => {
           setTimeout(
             auth => {
-              const recipe = { author: "youchen", dish: "strawberry banana" };
+              const recipe = { author: "mingjing", dish: "strawberry banana" };
               if (recipe.author == auth) {
                 resolve(recipe);
               } else {
@@ -62,6 +62,7 @@
         });
       };
 
+      /*
       getIDs
         .then(IDs => {
           console.log(IDs);
@@ -77,6 +78,45 @@
         .catch(error => {
           console.log(error);
         });
+
+      async function getRecipeTest() {
+        const IDs = await getIDs;
+        console.log(IDs);
+        const ID2 = await getRecipe(IDs[2]);
+        console.log(ID2);
+        const related = await getRelated(ID2.author);
+        console.log(related);
+
+        return related;
+      }
+
+      getRecipeTest().then(result =>
+        console.log(`${result.dish} is the best!`)
+      );
+      */
+
+      async function getWeatherAW(woeid) {
+        try {
+          const result = await fetch(
+            `https://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/${woeid}`
+          );
+          const jsonData = await result.json();
+          const today = jsonData.consolidated_weather[0];
+          console.log(
+            `Temperatures today in ${jsonData.title} stay between ${today.max_temp} and ${today.min_temp}`
+          );
+          return jsonData;
+        } catch (err) {
+          console.log(err);
+        }
+      }
+
+      getWeatherAW(44418);
+      let londonData;
+      getWeatherAW(2487956).then(data => {
+        londonData = data.title;
+        console.log(londonData);
+      });
     </script>
   </body>
 </html>
